Change the center of the map to Makkah

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
               .attr("x2",function(d) {return d.x2})
               .transition()
               .duration(1000)
-              .style("opacity",0)
-              .remove()
+              .style("opacity",0.2)
+              // .remove()
 
             //TRAIL CODE ENDS
           };
