--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?1.29.1"></script>
     <style type="text/css">
-
       html, body, #map {
         width: 500px;
         height: 500px;
         margin: 0;
         padding: 0;
+      }
+
+      svg:line {
+        outline: none;
+        border-color: #9ecaed;
+        box-shadow: 0 0 10px #9ecaed;
+      }
+
+
+      .stations, .stations svg {
+        position: absolute;
+      }
+
+      .stations svg {
+        width: 60px;
+        height: 20px;
+        padding-right: 100px;
+        font: 10px sans-serif;
+      }
+
+      .stations circle {
+        fill: brown;
+        stroke: black;
+        stroke-width: 1.5px;
       }
 
     </style>
@@ -22,7 +45,7 @@
 
       // Create the Google Map…
       var map = new google.maps.Map(d3.select("#map").node(), {
-        zoom:11,
+        zoom:8,
         center: new google.maps.LatLng(21.401817, 39.839680),
         mapTypeId: google.maps.MapTypeId.TERRAIN
       });
@@ -31,19 +54,13 @@
       // d3.json("stations.json", function(data) {
       var overlay = new google.maps.OverlayView();
 
-      var route = []
-
-      d3.json("google_directions_api_response.json", function(error, data) {
-
-          steps = data['routes'][0]['legs']['steps'];
-          number_steps = range(len(steps));
-          number_steps.forEach(function(i){
-            route.push({'i':i, "start":steps[i]['start_location'], "end":steps[i]['end_location']})
-          });
-      });
-
       // Add the container when the overlay is added to the map.
-      overlay.onAdd = function() {
+      overlay.onAdd = function(){
+          
+
+          // var stationsLayer = d3.select(this.getPanes().overlayLayer).append("div")
+          //     .attr("class", "stations");
+
           var layer = d3.select(this.getPanes().overlayLayer).append("svg")
               .attr("id", "main")
               .attr("width",500)
@@ -53,59 +70,123 @@
           // We could use a single SVG, but what size would it have?
           overlay.draw = function() {
               //TRAIL CODE STARTS
-            var data = [{"x":0,"y":0,"i":0}]
+            // var data = [{"x":0,"y":0,"i":0}]
 
-            d3.range(1000).forEach(function(i) {
-              data.push({"i":i+1,
-              "x":data[data.length-1]["x"]+(Math.random())-.5,
-              "y":data[data.length-1]["y"]+(Math.random())-.5})
-            })
+            // d3.range(1000).forEach(function(i) {
+            //   data.push({"i":i+1,
+            //   "x":data[data.length-1]["x"]+(Math.random())-.5,
+            //   "y":data[data.length-1]["y"]+(Math.random())-.5})
+            // })
+
+            //time, location, path, screen_name, ind
+
+            var projection = this.getProjection(),
+                padding = 10;
+
+            records_data = []
+
+            d3.csv("vis_data_path.csv", function(records, error) {
+
+                var iterator = 0
+
+                records = records.slice(0,155);
+
+                records.forEach(function(record){
+
+                  // console.log(iterator);
+                  iterator = iterator + 1;
+
+                  // console.log(record);
+
+                  loc = record['location'];
+                  time = record['loc_time']
+                  route = record['path']
+                  ind = record['ind']
+                  screen_name = record['screen_name']
+
+                  if(route != ''){
+
+                      //check if the source and destination are same  
+                      data = JSON.parse(route.replace(/'/g, '"'))
+                      console.log(data);
+
+                      //Build x and y scales appropriate to it.
+                      x1 = d3.scale.linear().range([0,500]).domain(d3.extent(data.map(function(d)  {return d.x1} ))) 
+                      y1 = d3.scale.linear().range([0,500]).domain(d3.extent(data.map(function(d)  {return d.y1} )))
+                      // x2 = d3.scale.linear().range([0,500]).domain(d3.extent(data.map(function(d)  {return d.x2} ))) 
+                      // y2 = d3.scale.linear().range([0,500]).domain(d3.extent(data.map(function(d)  {return d.y2} )))
+
+                      layout = d3.layout.trail() 
+
+                      layout = layout 
+                          .positioner(function(d) {return [x1(d['x1']),y1(d['y1'])]}) //, x2(d['x2']), y2(d['y2'])
+                          .coordType("xy")
+                      // .sort(function(a,b) {return a.i-b.i})
+
+                      var out = layout.data(data).layout()
+
+                      console.log(out);
+
+                      var line = d3.select("#main").selectAll("line").data(out)
+
+                      line
+                        .enter()
+                        .append("line")
+                        .style("stroke-width",3)
+                        .style("stroke","orange")
+                        .style("opacity",10) 
+                        .attr("x0",function(d) {return d['x0']})
+                        .attr("x1",function(d) {return parseFloat(d.x1)}) 
+                        .attr("y1",function(d) {return parseFloat(d.y1)}) 
+                        .attr("y2",function(d) {return parseFloat(d.y1)}) 
+                        .attr("x2",function(d) {return parseFloat(d.x1)})
+                        .transition() 
+                        .delay(function(d,i)   {return i*100})               
+                        .attr("y2",function(d, i) {return parseFloat(d.y2)}) 
+                        .attr("x2",function(d, i) {return parseFloat(d.x2)})
+                        .transition()
+                        .duration(1000)
+                        .style("opacity",0.2)
+                        // .remove()
+
+                  }
+                  else{
+                      // var marker = stationsLayer.selectAll("svg")
+                      //     .data(loc)
+                      //     .each(transform) // update existing markers
+                      //   .enter().append("svg:svg")
+                      //     .each(transform)
+                      //     .attr("class", "marker");
+
+                      // // Add a circle.
+                      // marker.append("svg:circle")
+                      //     .attr("r", 4.5)
+                      //     .attr("cx", padding)
+                      //     .attr("cy", padding);
 
 
-            //Build x and y scales appropriate to it.
-            x = d3.scale.linear().range([0,500]).domain(d3.extent(data.map(function(d)  {return d.x}))) 
-            y = d3.scale.linear().range([0,500]).domain(d3.extent(data.map(function(d)  {return d.y})))
+                      // function transform(d) {
+                      //   // d = new google.maps.LatLng(d.value[1], d.value[0]);
+                      //   console.log(d);
+                      //   d = new google.maps.LatLng(d[0], d[1]);
+                      //   d = projection.fromLatLngToDivPixel(d);
+                      //   return d3.select(this)
+                      //       .style("left", (d.x - padding) + "px")
+                      //       .style("top", (d.y - padding) + "px");
+
+                      // }
+                    }
+                });
+            });
 
 
-            layout = d3.layout.trail() 
-
-            layout = layout 
-                .positioner(function(d) {return [x(d['x']),y(d['y'])]}) 
-                .coordType("xy")
-            .sort(function(a,b) {return a.i-b.i})
-
-            var out = layout.data(data).layout()
-
-            var line = d3.select("#main").selectAll("line").data(out)
-
-            line
-              .enter()
-              .append("line")
-              .style("stroke-width",3)
-              .style("stroke","orange")
-              .style("opacity",1) 
-              .attr("x0",function(d) {return d['x0']})
-              .attr("x1",function(d) {return d.x1}) 
-              .attr("y1",function(d) {return d.y1}) 
-              .attr("y2",function(d) {return d.y1}) 
-              .attr("x2",function(d) {return d.x1})
-              .transition() 
-              .delay(function(d,i)   {return i*100})               
-              .attr("y2",function(d) {return d.y2}) 
-              .attr("x2",function(d) {return d.x2})
-              .transition()
-              .duration(1000)
-              .style("opacity",0.2)
-              // .remove()
-
-            //TRAIL CODE ENDS
           };
-        };
+      };
 
         
 
         // Bind our overlay to the map…
-        overlay.setMap(map);
+      overlay.setMap(map);
       // });
 
     </script>
