--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div id="map"></div>
-    <script src="./Path demonstration_files/pathlayout.js"></script>
+    <script src="./D3-trail/pathlayout.js"></script>
     <script type="text/javascript">
 
       var map = new google.maps.Map(d3.select("#map").node(), {
