--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?1.29.1"></script>
     <style type="text/css">
       html, body, #map {
-        width: 1000px;
-        height: 1000px;
+        width: 100%;
+        height: 100%;
         margin: 0;
         padding: 0;
       }
@@ -35,7 +35,6 @@
         stroke: orange;
         stroke-width: 1.5px;
       }
-
     </style>
   </head>
   <body>
@@ -43,13 +42,14 @@
     <script src="./D3-trail/pathlayout.js"></script>
     <script type="text/javascript">
 
-
+      var SPEED = 1000;
       var ZOOM = 13;
+      
       var map = new google.maps.Map(d3.select("#map").node(), {
         zoom:ZOOM,
         minZoom:ZOOM,
         maxZoom:ZOOM,
-        center: new google.maps.LatLng(21.5433, 39.1728),//  21.401817, 39.839680
+        center: new google.maps.LatLng(21.5933, 39.1928),//  21.401817, 39.839680
         mapTypeId: google.maps.MapTypeId.TERRAIN
       });
 
@@ -65,8 +65,8 @@
 
           var layer = d3.select(this.getPanes().overlayLayer).append("svg")
               .attr("id", "main")
-              .attr("width",1000)
-              .attr("height",1000);
+              .attr("width",width)
+              .attr("height",width);
 
           overlay.draw = function() {
 
@@ -79,7 +79,8 @@
 
                 var iterator = 0
 
-                // records = records.slice(0,1000);// record = records[152];
+
+                records = records.slice(0,3000);// record = records[152];
 
                 paths = records.filter (function(d,i){ return d['path'] != ''})
                 points = records.filter(function(d,i){ return d['path'] == ''})
@@ -107,8 +108,6 @@
                     route.forEach(function(line, i){
                       records_data.push({'x':line['x1'], 'y':line['y1'], 'i':i});
                     });
-
-                    console.log(records_data);
 
                     layout = d3.layout.trail() 
 
@@ -140,19 +139,17 @@
                       .attr("x2",function(d) {return d.x1})
                       .transition()
                       .each("start", function(){})
-                      .delay(function(d,i)   {return iterator*1500+(i*1000)})
+                      .delay(function(d,i)   {return iterator*(SPEED+500)+(i*SPEED)})
                       .duration(1000)
                       .attr("y2",function(d, i) {return d.y2})
                       .attr("x2",function(d, i) {return d.x2})
                       .transition()
-                      .duration(10000)
+                      .duration(SPEED*10)
                       .style("opacity",0.2)
 
 
                     iterator = iterator + 1;
                 });
-
-                console.log(users_data);
 
                   points_data = []
 
@@ -181,11 +178,12 @@
                   marker.append("svg:circle")
                       .attr("cx", padding)
                       .attr("cy", padding)
+                      .style("opacity", 0.9)
                       .transition() 
-                      .delay(function(d,i)   {return i*100})
-                      .duration(200)
+                      .delay(function(d,i)   {return i*(SPEED/10)})
+                      .duration(800)
                       .attr("r", 20)
-                      .each("end", function(){ d3.select(this).transition().duration(1000).attr("r", 10).style("opacity", 0.3)});
+                      .each("end", function(){ d3.select(this).transition().duration((SPEED/10)).attr("r", 10).style("opacity", 0.2)});
             });
 
 
